syntax = "proto3";

package ultpb;

import "liability.proto";

message Account {
  // Public key of the account.
  string AccountID = 1;
  // The account balance in ULU.
  int64 Balance = 2;
  // Public key of the signer of the account.
  string Signer = 3;
  // Latest transaction sequence number.
  uint64 SeqNum = 4;
  // The number of entries belong to the account.
  int32 EntryCount = 5;
  // ULTkeys of transactions belongs to this account.
  repeated string TxKeyList = 6;  
  // Liability of the native asset.
  Liability Liability = 7;
}
